--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
         </section>
     </div>
     <footer>
-        <p>&copy; 2025 [Nama Anda]. All rights reserved.</p>
+        <p>&copy; 2025 Bagas Rpl All rights reserved.</p>
     </footer>
     <button id="scrollTopBtn" title="Go to top">&#9650;</button>
     <script src="script.js"></script>
 </body>
 </html>
+
